infra/k8s/auth-mongo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-deploy
spec:
  selector:
    matchLabels:
      app: auth-mongo
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo-container
          image: mongo:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-service
spec:
  selector:
    app: auth-mongo
  type: ClusterIP
  ports:
    - name: auth-db-port
      protocol: TCP
      port: 27017
      targetPort: 27017
