infra/k8s/ingress_health.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: grouplottery.com
      http:
        paths:
          - path: /auth/health
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3100

          - path: /tickets/health
            pathType: Prefix
            backend:
              service:
                name: tickets-service
                port:
                  number: 3200
